--- a/src/main/resources/com/example/pilifitproject/view/AboutUs2.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/AboutUs2.fxml
@@ -1,114 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="707.0" prefWidth="1392.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <AnchorPane prefHeight="707.0" prefWidth="1392.0" style="-fx-background-color: BLACK;" BorderPane.alignment="CENTER">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" styleClass="image-holder" stylesheets="@../styles/Contact.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <AnchorPane prefHeight="72.0" prefWidth="1278.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="707.0" fitWidth="1392.0" opacity="0.65" pickOnBounds="true">
-               <image>
-                  <Image url="@../../../../../../../../../../Downloads/IMG_1441%20(1).png" />
-               </image>
-            </ImageView>
-            <GridPane alignment="CENTER" layoutX="-6.0" layoutY="78.0" prefHeight="206.0" prefWidth="1390.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <StackPane prefHeight="700.0" prefWidth="1280.0">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="119.0" prefWidth="463.0" text="PILIFITS" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1">
-                     <font>
-                        <Font size="92.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets top="15.0" />
-                     </GridPane.margin>
-                  </Label>
+                  <AnchorPane prefHeight="700.0" prefWidth="1280.0" style="-fx-background-color: #999999;">
+                     <children>
+                        <ImageView fitHeight="700.0" fitWidth="1280.0" layoutX="121.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/background/pilifitbg.png" />
+                           </image>
+                        </ImageView>
+                        <Pane id="JustAboutBox" layoutX="139.0" layoutY="68.0" prefHeight="205.0" prefWidth="762.0" style="-fx-background-color: rgba(0, 0, 0, 0.5);;" styleClass="tab-border">
+                           <children>
+                              <Label layoutX="308.0" layoutY="16.0" prefHeight="51.0" prefWidth="193.0" styleClass="title-text" text="ABOUT US" textFill="WHITE">
+                                 <font>
+                                    <Font size="32.0" />
+                                 </font>
+                                 <effect>
+                                    <Blend opacity="0.69" />
+                                 </effect>
+                              </Label>
+                              <Label layoutX="19.0" layoutY="77.0" prefHeight="56.0" prefWidth="400.0" textAlignment="JUSTIFY" textFill="WHITE" />
+                              <Text fill="WHITE" layoutX="37.0" layoutY="100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-filter2" text="Who We Are: At Pilifit, we're passionate about simplifying your daily routine—starting with your wardrobe. Founded by a team of fashion enthusiasts and tech innovators, our mission is to help you dress with confidence, ease, and style—every single day." textAlignment="JUSTIFY" wrappingWidth="696.0269165039062">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </Pane>
+                        <Pane id="WhatWeDo" layoutX="-7.0" layoutY="448.0" prefHeight="80.0" prefWidth="380.0" rotate="90.0" style="-fx-background-color: rgba(200, 210, 230, 0.5);" styleClass="tab-border">
+                           <children>
+                              <ImageView fitHeight="80.0" fitWidth="200.0" layoutX="89.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" />
+                           </children></Pane>
+                        <Pane id="WhyWeStarted" layoutX="109.0" layoutY="454.0" prefHeight="80.0" prefWidth="350.0" rotate="90.0" style="-fx-background-color: rgba(170, 180, 200, 0.5);" styleClass="tab-border" />
+                        <Pane id="OurVision" layoutX="221.0" layoutY="459.0" prefHeight="75.0" prefWidth="320.0" rotate="90.0" style="-fx-background-color: rgba(120, 130, 160, 0.5);" styleClass="tab-border" />
+                        <Pane id="MeetTheTeam" layoutX="328.0" layoutY="467.0" prefHeight="70.0" prefWidth="290.0" rotate="90.0" style="-fx-background-color: rgba(80, 90, 120, 0.5);" styleClass="tab-border" />
+                        <Pane id="JoinUs" layoutX="433.0" layoutY="468.0" prefHeight="70.0" prefWidth="260.0" rotate="90.0" style="-fx-background-color: rgba(60, 70, 100, 0.5);" styleClass="tab-border" />
+
+                        <Pane id="FrameForVideo(Unsure)" layoutX="615.0" layoutY="336.0" prefHeight="326.0" prefWidth="528.0" style="-fx-background-color: rgba(0, 0, 0, 0.5);" styleClass="tab-border" />
+                        <AnchorPane layoutX="937.0" layoutY="80.0" prefHeight="180.0" prefWidth="178.0" style="-fx-background-color: rgba(200, 210, 230, 0.5);">
+                           <children>
+                              <ImageView id="Logo" fitHeight="184.0" fitWidth="180.0" layoutX="1.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </AnchorPane>
                </children>
-            </GridPane>
-            <Pane prefHeight="66.0" prefWidth="1392.0" style="-fx-background-color: black;">
+            </StackPane>
+            <AnchorPane layoutX="30.0" layoutY="1.0" prefHeight="42.0" prefWidth="739.0">
                <children>
-                  <Button blendMode="ADD" layoutX="10.0" layoutY="5.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="133.0" style="-fx-background-color: BLACK;" text="HOME" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Button>
-                  <Button blendMode="ADD" layoutX="137.0" layoutY="4.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="133.0" style="-fx-background-color: BLACK;" text="ABOUT" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Button>
-                  <Button blendMode="ADD" layoutX="254.0" layoutY="2.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="175.0" style="-fx-background-color: BLACK;" text="CONTACT" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Button>
+                  <Button layoutX="7.0" layoutY="9.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="53.0" text="HOME" textFill="WHITE" />
+                  <Button layoutX="67.0" layoutY="9.0" mnemonicParsing="false" prefWidth="57.0" text="ABOUT" textFill="WHITE" />
+                  <Button layoutX="131.0" layoutY="9.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="CONTACT" textFill="WHITE" />
                </children>
-            </Pane>
-            <VBox layoutX="36.0" layoutY="186.0" prefHeight="500.0" prefWidth="562.0" style="-fx-background-color: black;" stylesheets="@../styles/AboutUs.css">
-               <styleClass>
-                  <String fx:value="border-pad" />
-                  <String fx:value="tab-border" />
-               </styleClass>
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="74.0" prefWidth="1126.0" text="ABOUT US" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-            <VBox layoutX="621.0" layoutY="186.0" prefHeight="198.0" prefWidth="350.0" style="-fx-background-color: black;" stylesheets="@../styles/AboutUs.css">
-               <styleClass>
-                  <String fx:value="border-pad" />
-                  <String fx:value="tab-border" />
-               </styleClass>
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="36.0" prefWidth="326.0" text="GOAL" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-            <VBox layoutX="1002.0" layoutY="187.0" prefHeight="198.0" prefWidth="350.0" style="-fx-background-color: black;" stylesheets="@../styles/AboutUs.css">
-               <styleClass>
-                  <String fx:value="border-pad" />
-                  <String fx:value="tab-border" />
-               </styleClass>
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="41.0" prefWidth="326.0" text="CREATORS" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
+            </AnchorPane>
          </children>
       </AnchorPane>
-   </top>
-   <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
