--- a/src/main/resources/com/example/pilifitproject/view/Generate2.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Generate2.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,43 +8,64 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="476.0" prefWidth="380.0" stylesheets="@../styles/Generate2.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController">
+<AnchorPane prefHeight="476.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController">
    <children>
-      <Pane layoutY="2.0" prefHeight="470.0" prefWidth="380.0" stylesheets="@../styles/Generate2.css">
+      <Pane layoutX="-0.5" layoutY="-0.5">
          <children>
-            <GridPane gridLinesVisible="true" layoutY="-2.0" prefHeight="475.0" prefWidth="379.0">
+            <GridPane gridLinesVisible="true" prefHeight="476.0" prefWidth="380.0">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="10.0" prefWidth="153.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
                </columnConstraints>
                <rowConstraints>
-                  <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="135.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="202.0" minHeight="0.0" prefHeight="140.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="146.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="68.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="148.0" minHeight="148.0" percentHeight="0.0" prefHeight="148.0" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="28.0" minHeight="28.0" percentHeight="0.0" prefHeight="28.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="140.0" fitWidth="156.0" layoutX="10.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                  <ImageView fitHeight="139.0" fitWidth="154.0" layoutX="10.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="140.0" fitWidth="150.0" layoutX="10.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                  <Button mnemonicParsing="false" styleClass="icon-button" text="SAVE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
-                  <Button layoutX="300.0" layoutY="459.0" mnemonicParsing="false" styleClass="icon-button" text="X" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="BASELINE" />
-                  <Button layoutX="300.0" layoutY="459.0" mnemonicParsing="false" styleClass="icon-button" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <Button layoutX="263.0" layoutY="357.0" mnemonicParsing="false" styleClass="icon-button" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <Button layoutX="263.0" layoutY="255.0" mnemonicParsing="false" styleClass="icon-button" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <Button layoutX="314.0" layoutY="152.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <Button layoutX="10.0" layoutY="152.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <Button layoutX="10.0" layoutY="255.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" styleClass="icon-button" text="🔁" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <ImageView fitHeight="149.0" fitWidth="158.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" />
+                  <ImageView fitHeight="149.0" fitWidth="158.0" layoutX="121.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <ImageView fitHeight="122.0" fitWidth="158.0" layoutX="121.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <Button mnemonicParsing="false" prefWidth="44.0" text="SAVE" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS" />
+                  <Button mnemonicParsing="false" rotate="180.0" text="➤" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" rotate="180.0" text="➤" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" rotate="180.0" text="➤" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" text="➤" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="338.0" layoutY="101.0" mnemonicParsing="false" text="➤" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="338.0" layoutY="250.0" mnemonicParsing="false" text="➤" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
                </children>
             </GridPane>
          </children>
       </Pane>
    </children>
+   <stylesheets>
+      <URL value="@../styles/Generate2.css" />
+      <URL value="@../styles/Home.css" />
+   </stylesheets>
 </AnchorPane>
