--- a/src/main/resources/com/example/pilifitproject/view/Collection.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Collection.fxml
@@ -5,12 +5,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.RadialGradient?>
@@ -76,25 +78,62 @@
    <center>
         <AnchorPane prefHeight="442.0" prefWidth="1580.0" BorderPane.alignment="CENTER">
             <children>
-                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="363.0" layoutY="59.0" prefHeight="480.0" prefWidth="854.0">
+                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="158.0" layoutY="63.0" prefHeight="480.0" prefWidth="1275.0">
                     <content>
-                        <GridPane id="upload/itemsgridpane" gridLinesVisible="true" hgap="15.0" prefHeight="462.0" prefWidth="851.0" vgap="10.0">
+                        <GridPane id="upload/itemsgridpane" gridLinesVisible="true" hgap="15.0" prefWidth="1270.0" vgap="10.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="300.0" percentWidth="0.0" prefWidth="124.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="300.0" minWidth="300.0" percentWidth="0.0" prefWidth="300.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="300.0" minWidth="300.0" percentWidth="0.0" prefWidth="300.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="300.0" minWidth="300.0" percentWidth="0.0" prefWidth="300.0" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="375.0" minHeight="375.0" percentHeight="0.0" prefHeight="375.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="375.0" minHeight="375.0" percentHeight="0.0" prefHeight="375.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <padding>
-                                <Insets bottom="5.0" left="10.0" right="20.0" top="5.0" />
+                                <Insets bottom="5.0" left="5.0" right="15.0" top="5.0" />
                             </padding>
+                     <children>
+                        <Pane prefHeight="200.0" prefWidth="200.0" />
+                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="300.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css">
+                            <children>
+                                <Pane layoutX="10.0" layoutY="14.0" prefHeight="282.0" prefWidth="280.0" style="-fx-background-color: #CCCCCC;" styleClass="image-view">
+                                    <children>
+                                    <AnchorPane layoutX="9.0" layoutY="10.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
+                                       <children>
+                                          <ImageView id="TopItems" fitHeight="128.0" fitWidth="133.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="146.0" layoutY="79.0" prefHeight="142.0" prefWidth="127.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
+                                       <children>
+                                          <ImageView fitHeight="150.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="9.0" layoutY="142.0" prefHeight="128.0" prefWidth="132.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
+                                       <children>
+                                          <ImageView id="ShoeItems" fitHeight="128.0" fitWidth="131.0" pickOnBounds="true" preserveRatio="true" />
+                                       </children>
+                                    </AnchorPane>
+                                    </children>
+                                </Pane>
+                                <Pane layoutX="21.0" layoutY="305.0" prefHeight="56.0" prefWidth="259.0">
+                                    <children>
+                                        <TextField id="TitleOfTheOutfit" layoutY="12.0" prefHeight="30.0" prefWidth="201.0" promptText="FIt Name" styleClass="name-button" stylesheets="@../styles/ItemDisplay.css">
+                                            <font>
+                                                <Font name="System Bold" size="88.0" />
+                                            </font>
+                                    </TextField>
+                                        <Button id="DeleteButton" layoutX="216.0" layoutY="5.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="44.0" styleClass="icon-button" stylesheets="@../styles/ItemDisplay.css" text="🗑">
+                                            <font>
+                                                <Font size="20.0" />
+                                            </font>
+                                        </Button>
+                                    </children>
+                                </Pane>
+                            </children>
+                        </AnchorPane>
+                     </children>
                         </GridPane>
                     </content>
                 </ScrollPane>
