--- a/src/main/resources/com/example/pilifitproject/view/Collection.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Collection.fxml
@@ -73,24 +73,22 @@
             </children>
         </AnchorPane>
     </top>
-   <center>
+   <bottom>
         <AnchorPane prefHeight="442.0" prefWidth="1580.0" BorderPane.alignment="CENTER">
             <children>
-                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="363.0" layoutY="59.0" prefHeight="480.0" prefWidth="854.0">
+                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="284.0" layoutY="60.0" prefHeight="479.0" prefWidth="755.0">
                     <content>
-                        <GridPane id="upload/itemsgridpane" gridLinesVisible="true" hgap="15.0" prefHeight="462.0" prefWidth="851.0" vgap="10.0">
+                        <GridPane id="upload/itemsgridpane" fx:id="fitGridPane" gridLinesVisible="true" hgap="15.0" prefHeight="478.0" prefWidth="755.0" styleClass="grid-cell" stylesheets="@../styles/Home.css" vgap="10.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
                                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
                                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
                                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="221.33330078125" minHeight="138.1333038330078" percentHeight="0.0" prefHeight="211.73326416015624" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="216.2666961669922" minHeight="99.20000305175779" percentHeight="0.0" prefHeight="142.66673583984377" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="150.0" minHeight="74.66660156249998" percentHeight="0.0" prefHeight="100.26663818359373" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <padding>
                                 <Insets bottom="5.0" left="10.0" right="20.0" top="5.0" />
@@ -123,5 +121,5 @@
                 </GridPane>
             </children>
         </AnchorPane>
-   </center>
+   </bottom>
 </BorderPane>
