--- a/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
@@ -2,35 +2,45 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="300.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="300.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.FitDialogController">
     <children>
         <Pane layoutX="10.0" layoutY="14.0" prefHeight="282.0" prefWidth="280.0" style="-fx-background-color: #CCCCCC;" styleClass="image-view">
             <children>
             <AnchorPane layoutX="9.0" layoutY="10.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
                <children>
-                  <ImageView id="TopItems" fitHeight="128.0" fitWidth="133.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView id="TopItems" fitHeight="128.0" fitWidth="133.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="topFitImage" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="146.0" layoutY="79.0" prefHeight="142.0" prefWidth="127.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
                <children>
-                  <ImageView fitHeight="150.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fitHeight="150.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="shoesFitImage" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="9.0" layoutY="142.0" prefHeight="128.0" prefWidth="132.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
                <children>
-                  <ImageView id="ShoeItems" fitHeight="128.0" fitWidth="131.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView id="ShoeItems" fitHeight="128.0" fitWidth="131.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="bottomFitImage" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             </children>
         </Pane>
         <Pane layoutX="21.0" layoutY="305.0" prefHeight="56.0" prefWidth="259.0">
             <children>
-                <TextField id="TitleOfTheOutfit" layoutY="12.0" prefHeight="30.0" prefWidth="201.0" promptText="FIt Name" styleClass="name-button" stylesheets="@../styles/ItemDisplay.css">
+                <TextField id="TitleOfTheOutfit" layoutY="4.0" prefHeight="30.0" prefWidth="170.0" promptText="FIt Name" styleClass="name-button" stylesheets="@../styles/ItemDisplay.css">
                     <font>
                         <Font name="System Bold" size="88.0" />
                     </font></TextField>
@@ -39,6 +49,7 @@
                         <Font size="20.0" />
                     </font>
                 </Button>
+            <Button layoutX="177.0" layoutY="6.0" mnemonicParsing="false" text="❤" />
             </children>
         </Pane>
     </children>
