--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -137,7 +137,7 @@
                     <children>
                         <AnchorPane fx:id="GenerateAnchor" prefHeight="578.0" prefWidth="578.0">
                             <children>
-                                <Pane fx:id="generatePane" layoutX="86.0" layoutY="32.0" prefHeight="553.0" prefWidth="417.0">
+                                <Pane fx:id="generatePane" layoutX="100.0" layoutY="-3.0" prefHeight="553.0" prefWidth="417.0">
                                     <children>
                                         <GridPane gridLinesVisible="true" layoutX="78.0" layoutY="69.0" prefHeight="400.0" prefWidth="281.0">
                                             <columnConstraints>
@@ -184,8 +184,8 @@
                                                 </Button>
                                             </children>
                                         </GridPane>
-                                        <Button fx:id="generateRandomFitBtn" layoutX="180.0" layoutY="1.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="101.0" text="generate" />
-                                        <Button fx:id="saveFitBtn" layoutX="199.0" layoutY="528.0" mnemonicParsing="false" prefWidth="44.0" text="SAVE" />
+                                        <Button fx:id="generateRandomFitBtn" layoutX="167.0" layoutY="10.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="101.0" text="generate" />
+                                        <Button fx:id="saveFitBtn" layoutX="186.0" layoutY="524.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0" text="SAVE" />
                                     </children>
                                 </Pane>
                             </children>
